generate doc jwt token
