# internal/dto/dto.go
@@ -15,3 +15,7 @@ type CreateUserInput struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
+
+type GetJWTOutput struct {
+	AccessToken string `json:"access_token"`
+}
